--- a/team-profile-generator/package.json
+++ b/team-profile-generator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "team-profile-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "team-profile-generator",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
