--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "start": "node app.js",
     "test": "jest --verbose test/*"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jj77847/team-profile-generator.git"
+  },
   "keywords": [],
   "author": "Jonathan Jefferies",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "inquirer": "^8.2.0"
   },
