--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "team-profile-generator",
   "version": "1.0.0",
   "description": "team-profile-generator",
+  "start": "src/index.js",
   "scripts": {
     "start": "node app.js",
     "test": "jest --verbose test/*"
@@ -12,7 +13,7 @@
   },
   "keywords": [],
   "author": "Jonathan Jefferies",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "inquirer": "^8.2.0"
   },
