--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "team-profile-generator",
   "start": "src/index.js",
   "scripts": {
-    "start": "node app.js",
+    "app": "node app.js",
     "test": "jest --verbose test/*"
   },
   "repository": {
