--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "start": "src/index.js",
   "scripts": {
     "app": "node app.js",
-    "test": "jest --verbose test/*"
+    "tests": "jest --verbose test/*"
   },
   "repository": {
     "type": "git",
